--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -10,7 +10,7 @@
     </button>
   </div>
 
-  <table mat-table [dataSource]="usuarios" class="mat-elevation-z4">
+  <table mat-table [dataSource]="usuarios.content" class="mat-elevation-z4">
     <!-- id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
@@ -41,24 +41,6 @@
       <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
     </ng-container>
 
-    <!-- token Column -->
-    <ng-container matColumnDef="token">
-      <th mat-header-cell *matHeaderCellDef>Token</th>
-      <td mat-cell *matCellDef="let row">{{row.token}}</td>
-    </ng-container>
-
-    <!-- login Column -->
-    <ng-container matColumnDef="login">
-      <th mat-header-cell *matHeaderCellDef>Login</th>
-      <td mat-cell *matCellDef="let row">{{row.login}}</td>
-    </ng-container>
-
-    <!-- expireAt Column -->
-    <ng-container matColumnDef="expireAt">
-      <th mat-header-cell *matHeaderCellDef>expireAt</th>
-      <td mat-cell *matCellDef="let row">{{row.expireAt}}</td>
-    </ng-container>
-
     <!-- Action Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
@@ -79,5 +61,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
+  <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage" [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
 
 </div>
