--- a/src/app/components/usuario/usuario-read/usuario-read.component.css
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.css
@@ -1,6 +1,7 @@
 table {
     width: 100%;
     padding: 5px;
+    
 }
 
 .update {
@@ -15,13 +16,36 @@ table {
     color: #e35e6b;
 }
 
-.mat-form-field {
-    font-size: 14px;
-    width: 100%;
-}
-
 button {
     background-color: #9FC5F8;
     margin: 10px;
     color: black;
+}
+
+.botoes {
+    display: flex;
+    width: 100%;
+    /* margin: 5px; */
+}
+
+.botoes1 {
+    display: flex;
+    width: 50%;
+    /* background-color: yellow; */
+}
+
+.botoes2 {
+    display: flex;
+    justify-content: flex-end;
+    width: 50%;
+}
+
+mat-form-field.mat-form-field { 
+    justify-content: center;
+    font-size: 12px;
+    color: white;
+    width: 50%;
+    height: 10px;
+    padding: 5px;
+    margin-right: 5px;
 }
