--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -1,13 +1,25 @@
 <div>
-  <div>
-    <button mat-raised-button (click)="navigateToNovoUsuario()">
-      <mat-icon class="color-icon">person_add</mat-icon>
-      Novo Usuário
-    </button>
-    <button mat-raised-button (click)="listarTodosUsuarios()">
-      <mat-icon class="color-icon">list</mat-icon>
-      Listar Usuários
-    </button>
+  <div class="botoes">
+    <div class="botoes1">
+      <button mat-raised-button (click)="navigateToNovoUsuario()">
+        <mat-icon class="color-icon">person_add</mat-icon>
+        Novo Usuário
+      </button>
+      <button mat-raised-button (click)="listarTodosUsuarios()">
+        <mat-icon class="color-icon">list</mat-icon>
+        Listar Usuários
+      </button>
+    </div>
+    <div class="botoes2">
+      <button mat-raised-button (click)="listarUsuariosFiltro()">
+        <mat-icon class="color-icon">search</mat-icon>
+        Filtrar
+      </button>
+      <mat-form-field appearance="outline" color="accent">
+        <mat-label>Filtrar por usuário</mat-label>
+        <input matInput [(ngModel)]="filter" name="filter">
+      </mat-form-field>
+    </div>
   </div>
 
   <table mat-table [dataSource]="usuarios.content" class="mat-elevation-z4">
@@ -19,7 +31,7 @@
 
     <!-- nome Column -->
     <ng-container matColumnDef="nome">
-      <th mat-header-cell *matHeaderCellDef>Nome (usuário)</th>
+      <th mat-header-cell *matHeaderCellDef>Usuário</th>
       <td mat-cell *matCellDef="let row">{{row.nome}}</td>
     </ng-container>
 
@@ -61,6 +73,7 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
-  <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage" [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
+  <mat-paginator #matPaginator [pageSizeOptions]="pageSizeOptions" [pageSize]="pageSize" [pageIndex]="currentPage"
+    [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
 
 </div>
