--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -26,7 +26,7 @@
 
         <mat-form-field appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <select matNativeControl [(ngModel)]="selectedEmpresa" name="empresa" disabled>
+            <select id="inputEmpresa" matNativeControl [(ngModel)]="selectedEmpresa" name="empresa" disabled>
                 <option value="" selected></option>
                 <option *ngFor="let empresa of empresas" [value]="empresa.value">
                     {{empresa.viewValue}}
