--- a/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
+++ b/src/app/components/equipamento/equipamento-read/equipamento-read.component.html
@@ -28,10 +28,10 @@
 
     <table mat-table [dataSource]="equipamentosEmpresa.content" class="mat-elevation-z4">
         <!-- id Column -->
-        <!-- <ng-container matColumnDef="id">
+        <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef>ID</th>
             <td mat-cell *matCellDef="let row">{{row.id}}</td>
-        </ng-container> -->
+        </ng-container>
 
         <!-- codEquipamento Column -->
         <ng-container matColumnDef="codEquipamento">
