--- a/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
+++ b/src/app/components/veiculo/veiculo-read/veiculo-read.component.html
@@ -37,7 +37,7 @@
         <!-- placaVeiculo Column -->
         <ng-container matColumnDef="placaVeiculo">
             <th mat-header-cell *matHeaderCellDef>Placa</th>
-        <td mat-cell *matCellDef="let row">{{row.placaVeiculo}}</td>
+            <td mat-cell *matCellDef="let row">{{row.placaVeiculo}}</td>
         </ng-container>
 
         <!-- modeloVeiculo Column -->
@@ -49,7 +49,7 @@
         <!-- numeroLinha Column -->
         <ng-container matColumnDef="numeroLinha">
             <th mat-header-cell *matHeaderCellDef>Linha</th>
-        <td mat-cell *matCellDef="let row">{{row.numeroLinha}}</td>
+            <td mat-cell *matCellDef="let row">{{row.numeroLinha}}</td>
         </ng-container>
 
         <!-- empresaId Column -->
@@ -67,27 +67,28 @@
         <!-- totalLugares Column -->
         <ng-container matColumnDef="totalLugares">
             <th mat-header-cell *matHeaderCellDef>Total de Lugares</th>
-        <td mat-cell *matCellDef="let row">{{row.totalLugares}}</td>
+            <td mat-cell *matCellDef="let row">{{row.totalLugares}}</td>
         </ng-container>
 
         <!-- lugaresSentados Column -->
         <ng-container matColumnDef="lugaresSentado">
             <th mat-header-cell *matHeaderCellDef>Sentados</th>
-        <td mat-cell *matCellDef="let row">{{row.lugaresSentado}}</td>
+            <td mat-cell *matCellDef="let row">{{row.lugaresSentado}}</td>
         </ng-container>
 
         <!-- lugaresEmPe Column -->
         <ng-container matColumnDef="lugaresEmPe">
             <th mat-header-cell *matHeaderCellDef>Em Pé</th>
-        <td mat-cell *matCellDef="let row">{{row.lugaresEmPe}}</td>
+            <td mat-cell *matCellDef="let row">{{row.lugaresEmPe}}</td>
         </ng-container>
 
         <!-- codEquipamento Column -->
         <ng-container matColumnDef="codEquipamento">
             <th mat-header-cell *matHeaderCellDef>Cód. Equip.</th>
-        <td mat-cell *matCellDef="let row"><span *ngIf="row.equipamento">{{row.equipamento.codEquipamento}}</span></td>
+            <td mat-cell *matCellDef="let row"><span *ngIf="row.equipamento">{{row.equipamento.codEquipamento}}</span>
+            </td>
         </ng-container>
-        
+
         <!-- Action Column -->
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef>Ações</th>
@@ -112,17 +113,3 @@
         [length]="totalSize" [showFirstLastButtons]="true" (page)="getPaginatorData($event)"></mat-paginator>
 
 </div>
-
-<!-- Exemplo de como inserir conteudo do banco na DropDown List -->
-<!-- <mat-form-field appearance="outline" color="accent">
-    <mat-label>Veiculos de todos usuários</mat-label>
-    <select matNativeControl [(ngModel)]="selectedVeiculo" name="veiculo" >
-        <option value="" selected></option>
-        <option *ngFor="let veiculo of veiculos.content" [value]="veiculo.placaVeiculo">
-            Placa: {{veiculo.placaVeiculo}}    - 
-            Modelo: {{veiculo.modeloVeiculo}}   - 
-            Linha: {{veiculo.numeroLinha}}  - 
-            EmpresaID: {{veiculo.empresaId}}
-        </option>
-    </select>
-</mat-form-field> -->
